--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "clsx": "^2.1.1",
     "lucide-react": "^0.562.0",
     "mongodb": "^7.0.0",
+    "mongoose": "^9.1.2",
     "next": "16.1.1",
     "ogl": "^1.0.11",
     "posthog-js": "^1.318.1",
@@ -23,6 +24,7 @@
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
+    "@types/mongoose": "^5.11.96",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
